# xeolauncher

./: .gitignore  README.md  RELEASE.md  build.bat  download_gcc.py  download_llvm.py  rebuild.bat  rebuild_output.txt  test_gpp.bat  vcpkg-llvm-toolchain.cmake
Codigo fuente/PrismLauncher-develop/: .clang-tidy  CMakeLists.txt  CONTRIBUTING.md  COPYING.md  Containerfile  README.md  flake.nix  renovate.json  vcpkg.json
Codigo fuente/PrismLauncher-develop/.github/ISSUE_TEMPLATE/: bug_report.yml  rfc.yml  suggestion.yml
Codigo fuente/PrismLauncher-develop/.github/actions/setup-dependencies/: action.yml
Codigo fuente/PrismLauncher-develop/.github/workflows/: backport.yml  blocked-prs.yml  clang-tidy.yml  container.yml  merge-blocking-pr.yml  nix.yml  release.yml  update-flake.yml
Codigo fuente/PrismLauncher-develop/buildconfig/: BuildConfig.cpp.in  BuildConfig.h
Codigo fuente/PrismLauncher-develop/cmake/: MacOSXBundleInfo.plist.in
Codigo fuente/PrismLauncher-develop/launcher/: Application.cpp  Application.h  BaseVersionList.h  CMakeLists.txt  FileSystem.cpp  FileSystem.h  HardwareInfo.cpp  HardwareInfo.h  InstanceCreationTask.cpp  InstanceCreationTask.h  InstanceList.cpp  LaunchController.cpp  LaunchController.h  Launcher.in  LibraryUtils.cpp  LibraryUtils.h  MTPixmapCache.h  Markdown.cpp  Markdown.h  PSaveFile.h  ResourceDownloadTask.cpp  ResourceDownloadTask.h  SysInfo.cpp  SysInfo.h  Version.cpp  Version.h  main.cpp
Codigo fuente/PrismLauncher-develop/launcher/archive/: ArchiveReader.cpp  ArchiveReader.h  ArchiveWriter.cpp
Codigo fuente/PrismLauncher-develop/launcher/console/: WindowsConsole.cpp
Codigo fuente/PrismLauncher-develop/launcher/filelink/: FileLink.h
Codigo fuente/PrismLauncher-develop/launcher/java/: JavaChecker.cpp  JavaInstallList.cpp  JavaInstallList.h  JavaUtils.cpp
Codigo fuente/PrismLauncher-develop/launcher/launch/steps/: CheckJava.cpp  PrintServers.cpp
Codigo fuente/PrismLauncher-develop/launcher/meta/: BaseEntity.cpp  BaseEntity.h  Index.cpp  VersionList.cpp  VersionList.h
Codigo fuente/PrismLauncher-develop/launcher/minecraft/: Agent.h  AssetsUtils.cpp  ComponentUpdateTask.cpp  ComponentUpdateTask.h  GradleSpecifier.h  LaunchProfile.cpp  LaunchProfile.h  Library.cpp  MinecraftInstance.cpp  OneSixVersionFormat.cpp  PackProfile.cpp  PackProfile_p.h  ProfileUtils.cpp  ShortcutUtils.cpp  VanillaInstanceCreationTask.cpp  VanillaInstanceCreationTask.h  VersionFile.h  World.cpp  WorldList.cpp
Codigo fuente/PrismLauncher-develop/launcher/minecraft/auth/: AccountList.cpp  MinecraftAccount.cpp  MinecraftAccount.h
Codigo fuente/PrismLauncher-develop/launcher/minecraft/launch/: EnsureAvailableMemory.cpp  EnsureAvailableMemory.h  EnsureOfflineLibraries.cpp  LauncherPartLaunch.cpp  PrintInstanceInfo.cpp  VerifyJavaInstall.cpp
Codigo fuente/PrismLauncher-develop/launcher/minecraft/mod/: DataPack.cpp  DataPack.h  DataPackFolderModel.cpp  DataPackFolderModel.h  Mod.cpp  ModFolderModel.cpp  ModFolderModel.h  Resource.cpp  Resource.h  ResourceFolderModel.cpp  ResourceFolderModel.h  ResourcePack.cpp  (+6 more)
Codigo fuente/PrismLauncher-develop/launcher/modplatform/: CheckUpdateTask.h  EnsureMetadataTask.cpp  ModIndex.cpp  ModIndex.h  ResourceAPI.cpp  ResourceAPI.h
Codigo fuente/PrismLauncher-develop/launcher/net/: ApiDownload.cpp  ApiDownload.h  ApiHeaderProxy.h  ChecksumValidator.h  FileSink.cpp  HttpMetaCache.cpp  NetJob.cpp  NetRequest.cpp
Codigo fuente/PrismLauncher-develop/launcher/screenshots/: ImgurUpload.cpp
Codigo fuente/PrismLauncher-develop/launcher/settings/: INIFile.cpp
Codigo fuente/PrismLauncher-develop/launcher/tasks/: ConcurrentTask.cpp  Task.cpp  Task.h
Codigo fuente/PrismLauncher-develop/launcher/translations/: POTranslator.cpp  TranslationsModel.cpp  TranslationsModel.h
Codigo fuente/PrismLauncher-develop/launcher/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
Codigo fuente/PrismLauncher-develop/launcher/updater/: PrismExternalUpdater.cpp  PrismExternalUpdater.h
Codigo fuente/PrismLauncher-develop/libraries/javacheck/: CMakeLists.txt
Codigo fuente/PrismLauncher-develop/libraries/launcher/: CMakeLists.txt
Codigo fuente/PrismLauncher-develop/nix/: unwrapped.nix  wrapper.nix
Codigo fuente/PrismLauncher-develop/program_info/: CMakeLists.txt  org.prismlauncher.PrismLauncher.metainfo.xml.in  org.xeolauncher.XeoLauncher.desktop.in  prismlauncher.6.scd.in  prismlauncher.rc.in  win_install.nsi.in
Codigo fuente/PrismLauncher-develop/tests/: Library_test.cpp  MojangVersionFormat_test.cpp  ResourceFolderModel_test.cpp  Version_test.cpp
vcpkg-triplets/: x64-mingw-dynamic.cmake
(+116 files in other folders)
